New: bridge mode

--- a/hostapd/hostapd_open.conf
+++ b/hostapd/hostapd_open.conf
@@ -1,5 +1,17 @@
+### Wireless network name ###
 interface=wlan0
+
+### Set your bridge name ###
+bridge=br0
+
+### Set your driver name ###
 driver=xxx
+
+### Set your ssid name ###
 ssid=dom-dom
-channel=2
+
+### Set your chanel ###
+channel=6
+
+### Set your hw mode ###
 hw_mode=g
